--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,302 +406,14 @@ footer>p {
     text-align: center;
 }
 
-footer>p>span {
+footer>p>span>a {
+    text-decoration: none;
     color: #FBBC05;
 }
 
+
+footer>p>span>a:hover {
+    text-decoration: underline;
+}
+
 /* Footer */
-/* Media Query */
-
-@media screen and (max-width: 320px) {
-    .flex-header {
-        flex-direction: column;
-    }
-
-    .box-logo {
-        margin-bottom: 15px;
-        padding: 10px 0;
-        border-bottom: 1px solid #E6E6E6;
-    }
-
-    .logo {
-        width: 50%;
-        height: 50%;
-        margin: auto;
-    }
-
-    .slogan {
-        margin: auto;
-        text-align: center;
-    }
-
-    .nav ul li {
-        flex-basis: 30%;
-    }
-
-    main {
-        padding-top: 110%;
-    }
-
-    .flex-box {
-        display: block;
-    }
-
-    .sumber {
-        font-size: 10px;
-        text-align: center;
-    }
-
-    .nama-gejala {
-        font-size: 1.5em;
-    }
-
-    .ket-gejala {
-        font-size: 12px;
-    }
-
-    .ket-kasus {
-        font-size: 1.5em;
-    }
-
-    aside {
-        padding-top: unset;
-        margin-top: -30px;
-    }
-
-    .box-profile,
-    .box-setting {
-        height: 340px;
-    }
-}
-
-@media screen and (min-width: 375px) {
-    .flex-header {
-        flex-direction: column;
-    }
-
-    .box-logo {
-        margin-bottom: 15px;
-        padding-bottom: 15px;
-        border-bottom: 1px solid #E6E6E6;
-    }
-
-    .slogan {
-        padding-left: 10px;
-    }
-
-    .text-sda {
-        font-size: 25px;
-    }
-
-    .nav ul li {
-        flex-basis: 30%;
-    }
-
-    main {
-        padding-top: 220px;
-    }
-
-    .flex-box {
-        display: block;
-    }
-
-    aside {
-        padding-top: unset;
-        margin-top: -30px;
-    }
-
-    .box-profile,
-    .box-setting {
-        height: 340px;
-    }
-}
-
-@media screen and (min-width: 425px) {
-    main {
-        padding-top: 220px;
-    }
-
-    .flex-box {
-        display: block;
-    }
-
-    aside {
-        margin-top: -30px;
-        padding-top: unset;
-    }
-
-    .box-profile,
-    .box-setting {
-        margin-top: 20px;
-    }
-}
-
-
-/* Responsive for Table */
-@media screen and (max-width: 600px) {
-    .judul-artikel {
-        text-align: center;
-    }
-
-    table {
-        background-color: #fff;
-        border: 0;
-    }
-
-    table caption {
-        padding: 10px;
-        font-size: 1.3em;
-    }
-
-    table thead {
-        display: none;
-    }
-
-    table tr {
-        border-bottom: 3px solid #34A853;
-        display: block;
-        margin-bottom: .725em;
-    }
-
-    table td {
-        border-bottom: 1px solid #34A853;
-        display: block;
-        font-size: .8em;
-        text-align: right;
-    }
-
-    table td:before {
-        content: attr(data-label);
-        float: left;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-
-    table td:last-child {
-        border-bottom: 0;
-    }
-}
-
-@media screen and (min-width: 768px) {
-
-    /* Membatasi lebar elemen Header hanya sebesar 1200px */
-    header {
-        max-width: 75rem;
-    }
-
-    .flex-header {
-        flex-direction: row;
-    }
-
-    main {
-        padding-top: 130px;
-    }
-
-    .box-logo {
-        flex-direction: row;
-
-        margin: unset;
-        padding: unset;
-        border: unset;
-    }
-
-    .slogan {
-        flex-basis: 70%;
-        line-height: 1.8em;
-    }
-
-    .text-sda {
-        font-size: 18px;
-    }
-
-    .slogan p {
-        font-size: 12px;
-    }
-
-    .nav ul li {
-        flex-basis: 30%;
-    }
-
-    .flex-container {
-        display: block;
-    }
-
-    .flex-box {
-        display: flex;
-    }
-
-    aside {
-        margin-top: -30px;
-        font-size: smaller;
-    }
-
-    .box-profile,
-    .box-setting {
-        height: 360px;
-        margin-top: 20px;
-    }
-
-    .fig-profile {
-        display: flex;
-    }
-
-    .photo-profile {
-        width: 300px;
-        height: 300px;
-        border-radius: 200px;
-    }
-
-    .figcap-profile {
-        margin: auto;
-    }
-
-    .figcap-profile>h2,
-    .figcap-profile>h3 {
-        font-size: 2.5em;
-        line-height: 2em;
-    }
-
-}
-
-@media screen and (min-width: 1024px) {
-    .nav ul li {
-        flex-basis: 10%;
-    }
-
-    main {
-        padding-top: 110px;
-        max-width: 75%;
-    }
-
-    .flex-container {
-        display: flex;
-    }
-
-    aside {
-        margin-top: unset;
-        padding-top: 100px;
-    }
-
-    .fig-profile {
-        display: unset;
-    }
-
-    .box-profile,
-    .box-setting {
-        height: 300px;
-        margin-top: 20px;
-    }
-
-    .photo-profile {
-        width: 160px;
-        height: 160px;
-    }
-
-    .figcap-profile>h2,
-    .figcap-profile>h3 {
-        font-size: 16px;
-        line-height: unset;
-    }
-
-}
